2006-12-06  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/AsyncImage.java (addObserver): Never notify
	null Observer.

2006-12-06  Roman Kennke  <kennke@aicas.com>

	* examples/gnu/classpath/examples/icons/back.png,
	* examples/gnu/classpath/examples/icons/reload.png:
	New icons for the HTML browser.
	* examples/gnu/classpath/examples/swing/HtmlDemo.java
	(history): New field. Manages the browsing history.
	(HtmlDemo): Initialize history.
	(createContent): Set location and add history. Add toolbar.
	(createToolBar): New helper method.
	(main): Make default size bigger.
	* examples/gnu/classpath/examples/swing/frame1.html,
	* examples/gnu/classpath/examples/swing/frame2.html,
	* examples/gnu/classpath/examples/swing/frame3.html,
	* examples/gnu/classpath/examples/swing/frame4.html,
	* examples/gnu/classpath/examples/swing/frames.html,
	* examples/gnu/classpath/examples/swing/tables.html:
	New example pages.
	* examples/gnu/classpath/examples/swing/welcome.html
	Add a couple of links and new test pages.

2006-12-06  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JEditorPane.java
	(getStream): Buffer the stream for efficiency.
	(setPage): Don't scroll the view at this point.
	* javax/swing/plaf/basic/BasicTextUI.java
	(RootView.paint): Call RootView's setSize to get synchronization.
	(RootView.setSize): Synchronize to prevent race in layout code.
	* javax/swing/text/AbstractDocument.java
	(notifyListeners): New field.
	(fireChangedUpdate): Track notifyListener field.
	(fireRemoveUpdate): Track notifyListener field.
	(fireIndertUpdate): Track notifyListener field.
	(writeLock): Check notifyListener and throw IllegalStateException.
	* javax/swing/text/View.java
	(preferenceChanged): Create local var for better thread safety and
	more efficiency.

2006-12-06  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* java/awt/ScrollPane.java (addNotify): Add a parent panel for any
	lightweight component, not just for non-Panel components.