@@ -1,3 +1,10 @@
+2006-12-06  Roman Kennke  <kennke@aicas.com>
+
+	* examples/gnu/classpath/examples/swing/Demo.java
+	(getIcon): Made package private.
+	* examples/gnu/classpath/examples/swing/HtmlDemo.java
+	(hyperlinkUpdate): Convert URL to string.
+
 2006-12-06  Mark Wielaard  <mark@klomp.org>
 
 	* gnu/java/awt/peer/gtk/AsyncImage.java (addObserver): Never notify
